[package]
name = "dot15d4-macros"
version = "0.1.0"
edition = "2021"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
repository = "https://github.com/thvdveld/dot15d4"
description = "Procedural macros for the dot15d4 crate"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.0", features = ["full"] }
quote = "1.0.35"
