[package]
name = "dot15d4"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot15d4-macros = { path = "../dot15d4-macros" }

log = { version = "0.4.21", optional = true }
defmt = { version = "0.3", optional = true }

bitflags = "2.4.2"
heapless = "0.8.0"
critical-section = "1.1"
rand_core = { version = "0.6.4", default-features = false }
embedded-hal-async = { version = "1.0.0" }

arbitrary = { version = "1.3.2", features = ["derive"], optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
critical-section = { version = "1.1", features = ["std"] }
pollster = { version = "0.3", features = ["macro"] }
rand = "0.8.5"

[features]
## Enable std only features
std = ["log"]
default = ["std"]

## Use tracing for logging
log = ["dep:log"]
## Use defmt for logging
defmt = ["dep:defmt"]

fuzz = ["std", "arbitrary"]
