[package]
name = "dot15d4"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot15d4-macros = { path = "../dot15d4-macros" }

tracing = { version = "0.1.38", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }

bitflags = "2.4.2"
heapless = "0.8.0"
critical-section = "1.1"

colored = { version = "2", optional = true }
clap = { version = "4.5.1", features = ["derive"], optional = true }
hex = { version = "0.4.3", optional = true }

[dev-dependencies]
pollster = "0.3"
tracing-subscriber = "0.3"
critical-section = { version = "1.1", features = ["std"] }

[features]
std = ["log-tracing"]
default = ["std"]
dot15d4-cat = ["std", "colored", "clap", "hex"]

log-tracing = ["dep:tracing"]
log-defmt = ["dep:tracing"]

[[bin]]
name = "dot15d4-cat"
required-features = ["dot15d4-cat"]
