[package]
name = "dot15d4"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/thvdveld/dot15d4"
description = "IEEE 802.15.4 implementation in Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot15d4-frame = { version = "0.1.0", path = "../dot15d4-frame" }

log = { version = "0.4.21", optional = true }
defmt = { version = "0.3", optional = true }

critical-section = "1.1"
rand_core = { version = "0.6.4", default-features = false }
embedded-hal-async = { version = "1.0.0" }

arbitrary = { version = "1.3.2", features = ["derive"], optional = true }

[dev-dependencies]
critical-section = { version = "1.1", features = ["std"] }
env_logger = "0.11.3"
pollster = { version = "0.3", features = ["macro"] }
rand = "0.8.5"

[features]
## Enable std only features
std = ["log"]
default = ["std"]

## Use tracing for logging
log = ["dep:log"]
## Use defmt for logging
defmt = ["dep:defmt"]

## Enable fuzzing
fuzz = ["arbitrary"]
